<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name" >

    <TextView
        android:id="@+id/LTPHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/theRealQuote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/bio"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_credits"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/credits"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp"
        android:text="@string/contribute"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>